# checkers_game

./: CMakeLists.txt  checkers.h  checkersboard.cpp  checkersgame.cpp  checkersplayer.hpp  class_diagram.puml  direction.hpp  main.cpp  position2d.cpp  position2d.hpp
tests/: CMakeLists.txt
